--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.2.0",
-    "better-sqlite3": "^9.0.0",
     "nuxt": "^4.1.0"
   },
   "devDependencies": {
     "@iconify-json/ph": "^1.2.2",
+    "@types/bun": "^1.3.4",
     "typescript": "^5"
   }
 }
